kubernetes/core/kyverno/policies/require-network-policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-network-policy
  annotations:
    policies.kyverno.io/title: Require Network Policy
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    policies.kyverno.io/description: >-
      This policy ensures that namespaces have network policies defined to control network traffic and improve security.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: check-network-policy
    match:
      any:
      - resources:
          kinds:
          - Namespace
    validate:
      message: "Network policies should be defined for this namespace"
      pattern:
        metadata:
          labels:
            network-policy: "?*"
