kubernetes/core/kyverno/policies/verify-flux-sources-in-cel.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-flux-sources
  annotations:
    policies.kyverno.io/title: Verify Flux Sources in CEL expressions
    policies.kyverno.io/category: Flux in CEL
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.0
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/subject: GitRepository, Bucket, HelmRepository, ImageRepository
    policies.kyverno.io/description: >-
      Flux source APIs include a number of different sources such as GitRepository, Bucket, HelmRepository, and ImageRepository resources. Each of these by default can be pointed to any location. In a production environment, it may be desired to restrict these to only known sources to prevent accessing outside sources. This policy verifies that each of the Flux sources comes from a trusted location.
spec:
  validationFailureAction: Audit
  rules:
  - name: flux-github-repositories
    match:
      any:
      - resources:
          kinds:
          - GitRepository
          operations:
          - CREATE
          - UPDATE
    exclude:
      any:
      - resources:
          namespaces:
          - flux-system
    validate:
      cel:
        expressions:
        - expression: "object.spec.url.startsWith('https://github.com/myorg/') || object.spec.url.startsWith('ssh://git@github.com:myorg/')"
          message: ".spec.url must be from a repository within the myorg organization."
  - name: flux-buckets
    match:
      any:
      - resources:
          kinds:
          - Bucket
          operations:
          - CREATE
          - UPDATE
    exclude:
      any:
      - resources:
          namespaces:
          - flux-system
    validate:
      cel:
        expressions:
        - expression: "object.spec.?endpoint.orValue('').endsWith('.myorg.com')"
          message: ".spec.endpoint must reference an address within the myorg organization."
  - name: flux-helm-repositories
    match:
      any:
      - resources:
          kinds:
          - HelmRepository
          operations:
          - CREATE
          - UPDATE
    exclude:
      any:
      - resources:
          namespaces:
          - flux-system
    validate:
      cel:
        expressions:
        - expression: "object.spec.url.matches('^https://[a-zA-Z0-9-]+[.]myorg[.]com/.*$')"
          message: ".spec.url must be from a repository within the myorg organization."
  - name: flux-image-repositories
    match:
      any:
      - resources:
          kinds:
          - ImageRepository
          operations:
          - CREATE
          - UPDATE
    exclude:
      any:
      - resources:
          namespaces:
          - flux-system
    validate:
      cel:
        expressions:
        - expression: "object.spec.?image.orValue('').startsWith('ghcr.io/myorg/')"
          message: ".spec.image must be from an image repository within the myorg organization."
